[package]
name = "crypt_msg"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Lewis", "Alex Austin"]

[dependencies]
libp2p = {version = "0.49.0", features = ["gossipsub", 
                                          "tcp", 
                                          "dns",  
                                          "websocket", 
                                          "async-std",
                                          "noise", 
                                          "mplex", 
                                          "yamux"]}
async-std = {version = "1.12.0", features = ["attributes"]}
futures = "0.3.25"
env_logger = "0.9.1"